--- a/magnus-react/src/pages/Contact.css
+++ b/magnus-react/src/pages/Contact.css
@@ -23,13 +23,14 @@
 }
 
 .form-row {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 1rem;
   margin-bottom: 1rem;
 }
 
 .form-row > div {
-  flex: 1;
+  width: 100%;
 }
 
 label {
